@startuml
title Class Diagram – Boeking Hoe kunnen verschillende boekingsservices (zoals Booking.com en eigen beheer in Triptop) worden geïntegreerd?

class Boeking {
    -int overnachtingsId
    -Date BoekingDatum;
    - String hotelNaam
    -Date beginDatum
    -Date eindDatum
}

class Overnachting {
    - int overnachtingsId;
    - String stad;
    - String hotelNaam;
    - Date beginDatum;
    - Date eindDatum;
}

class BoekingController {
    - BoekingService boekingService
    + haalOvernachtingenOp(): List<Overnachting>
    + slaBoekingOp(): Boeking
}


class BoekingRepository {
    + slaBoekingOp()
}


class BoekingOverzichtService {
    - BoekingRepository boekingRepository
    - BookingComAdapter bookingComAdapter

    - InternBoekingSysteem internBoekingSysteem
    - haalOvernachtingenOp(): List<Overnachting>
    - slaBoekingOp(): Boeking
    - haalExterneOvernachtingenOp(): List<Overnachting>
    - haalInterneOvernachtingenOp(): List<Overnachting>
}

class BookingComAdapter {
    - haalOvernachtingenOp()
}

class InternBoekingSysteem {
    - haalOvernachtingenOp()
}

interface BoekingInterface {
    # haalExterneOvernachtingenOp(): List<Overnachting>
    # haalInterneOvernachtingenOp(): List<Overnachting>
}

BoekingController --> BoekingOverzichtService: "gebruikt"
BoekingController --> Boeking: "gebruikt"
BoekingController --> Overnachting: "gebruikt"
BoekingOverzichtService --> BoekingRepository: "gebruikt"
BoekingOverzichtService --> BoekingInterface: "implementeert"
BoekingOverzichtService  --> BookingComAdapter : "gebruikt"
BoekingOverzichtService --> InternBoekingSysteem : "gebruikt"


@enduml